# ayclic

./: Cargo.toml  README.md
ayclic/: Cargo.toml
ayclic/examples/: acl-cfg-test.rs  cisco-cmd.rs  cisco-config.rs  cisco-ios-config.rs
ayclic/src/: conn.rs  error.rs  generic_conn.rs  lib.rs  path.rs  raw_transport.rs  templates.rs  transport.rs
aytextfsmplus/: Cargo.toml
aytextfsmplus/examples/: verify-ntctemplates.rs
aytextfsmplus/src/: lib.rs  textfsm.pest
aytextfsmplus/tests/: main.rs  varsubst.rs
docs/: CONTEXT.md
docs/cisco-docs/: cli-behavior-guide.md  config-commands-reference.md  exec-commands-reference.md  gap-analysis.md  interface-types-c3560cx.md  running-config-format.md  show-commands-reference.md  show-interfaces-format.md  show-ip-route-format.md  show-run-diff-analysis.md
docs/downstream-comms/: ayiosupdate-mockios-response.md  ayiosupdate-observations-response.md
docs/plans/: cli-editing-keys.md  command-tree.md  connection-path-architecture.md  device-state-model.md  ipv6-ospfv3-improvement.md  mockios-convergence-plan.md  mockios-data-model-gap-analysis.md  mockios-realism-batch1.md  next-steps.md  no-prefix-design.md  real-ios-comparison.md  rest-of-line-audit.md
docs/specs/: no-command-refactor.md
examples/: acl-cfg-test.rs
mockios/: Cargo.toml
mockios/src/: cmd_tree.rs  cmd_tree_conf.rs  cmd_tree_exec.rs  device_state.rs  lib.rs  main.rs
mockios/tests/: device_tests.rs  server_integration.rs
prompts/: mockios.md  resume.md  resume.txt  resume2.md
src/: conn.rs  error.rs  lib.rs  main.rs  transport.rs
(+2 files in other folders)
