[package]
name = "ayclic"
version = "0.1.0"
edition = "2021"

[dependencies]
aytelnet = { path = "../aytelnet" }
ayssh = { path = "../ayssh" }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md-5 = "0.10"
digest = "0.10"
axum = "0.8"
aho-corasick = "1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "cisco-cmd"
path = "examples/cisco-cmd.rs"
